# courses_platform

./: .gitignore  README.rst  pyproject.toml  requirements.txt
courses_platform/: db.sqlite3  manage.py
courses_platform/common/: permissions.py  serializers.py
courses_platform/config/: settings.py  urls.py  wsgi.py
courses_platform/courses/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
courses_platform/courses/migrations/: 0001_initial.py  0002_auto_20190624_1656.py  0002_auto_20190630_1838.py  0003_auto_20190630_1900.py  0003_item_order.py  0004_auto_20190625_1041.py  0004_auto_20190630_1904.py  0005_auto_20190625_1402.py  0005_auto_20190701_2049.py  0006_auto_20190625_1421.py  0006_auto_20190702_1142.py
courses_platform/user/: admin.py  forms.py  models.py  urls.py  views.py
courses_platform/user/migrations/: 0001_initial.py  0002_profile_photo.py
